<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ConfigActivity"
    android:label="@string/titleConfig">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:allowClickWhenDisabled="false"
        android:text="@string/tvUserName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/tvUserIntents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:allowClickWhenDisabled="false"
        android:text="@string/tvUserIntents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvUserName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/edUserName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/edUserIntents"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/edUserIntents"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edUserName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edUserName"
        app:layout_constraintTop_toBottomOf="@+id/edUserName"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="play"
        android:text="@string/btnPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edUserIntents"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/edUserIntents"
        app:layout_constraintTop_toBottomOf="@+id/edUserIntents"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="OnClick" />
</android.support.constraint.ConstraintLayout>