<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlayActivity"
    android:label="@string/titlePlay">

    <TextView
        android:id="@+id/tvPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edPlay"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/edPlay"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPlay"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/tvPlay"
        app:layout_constraintTop_toBottomOf="@+id/tvPlay"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/tvTryIntents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvTryÍntents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edPlay"
        app:layout_constraintStart_toStartOf="@+id/edPlay"
        app:layout_constraintTop_toBottomOf="@+id/edPlay"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Check"
        android:text="@string/btnCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvTryIntents"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTryIntents"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="TryAgain"
        android:text="@string/btnTryAgain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTryIntents"
        app:layout_constraintTop_toBottomOf="@+id/tvTryIntents"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tvTotalTry"
        android:layout_width="22dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTryIntents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/tvTryIntents"
        app:layout_constraintTop_toTopOf="@+id/tvTryIntents"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>